sign in and sign up completed

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -9,5 +9,9 @@
         align-items: center;
         width: 30%;
         font-size: 25 px;
+
+        .header__option {
+            cursor: pointer;
+        }
     }
 }
