--- a/src/Components/CartDropdown/CartDropdown.scss
+++ b/src/Components/CartDropdown/CartDropdown.scss
@@ -16,6 +16,11 @@
         display: flex;
         flex-direction: column;
         overflow: scroll;
+
+        .cartDropdown__empty {
+            font-size: 18px;
+            margin: 50px auto;
+        }
     }
 
     button {
