--- a/src/Components/CollectionItem/CollectionItem.scss
+++ b/src/Components/CollectionItem/CollectionItem.scss
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: column;
     width: 20%;
-    height: 300px;
+    height: 370px;
+    position: relative;
+    justify-content: center;
+    align-items: center;
 
     .collectionItem__background {
         width: 100%;
@@ -19,5 +22,24 @@
         justify-content: space-between;
         font-size: 18px;
         margin-top: 3px;
+    }
+
+    .button {
+        width: 80%;
+        opacity: 0.7;
+        top: 270px;
+        position: absolute;
+        display: none;
+    }
+
+    &:hover {
+        .collectionItem__background {
+            opacity: 0.8;
+        }
+
+        .button {
+            opacity: 0.85;
+            display: flex;
+        }
     }
 }
