Checkout page updated, payment integrated

--- a/src/Components/CollectionItem/CollectionItem.scss
+++ b/src/Components/CollectionItem/CollectionItem.scss
@@ -1,7 +1,7 @@
 .collectionItem {
     display: flex;
     flex-direction: column;
-    width: 20%;
+    width: 22vw;
     height: 370px;
     position: relative;
     justify-content: center;
