--- a/src/Components/CheckoutPage/CheckoutPage.scss
+++ b/src/Components/CheckoutPage/CheckoutPage.scss
@@ -27,4 +27,16 @@
         margin-left: auto;
         font-size: 36px;
     }
+    .checkout__testWarning {
+        text-align: center;
+        margin-top: 40px;
+        font-size: 24px;
+        color: red;
+    }
+
+    button {
+        margin-left: auto;
+        margin-bottom: 40px;
+        margin-top: 30px;
+    }
 }
